[package]
name = "rusted_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devices = "0.5.0"
wasm-bindgen = "0.2.92"
#printers = "2.0.0"
#pdfium-render = "0.8.20"
#image = { version = ">= 0.24.0" }
winprint = "0.1.0"
