[package]
name = "rusted_bridge"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
ipp = "=5.0.4"
js-sys = "0.3.70"

[dependencies.web-sys]
version = "0.3.70"
features = [
	"File",
]

#cups-sys = "0.1.4"
#pdfium-render = "0.8.20"
#image = { version = ">= 0.24.0" }

[lib]
crate-type = ["cdylib", "rlib"]
