[package]
name = "rusted_bridge"
version = "0.0.2"
edition = "2021"
author = "Paulo Afonso Martins Grechi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
ipp = "=5.0.4"
js-sys = "0.3.70"

[dependencies.web-sys]
version = "0.3.70"
features = [
	"File",
	"Blob",
	"ReadableStream",
]


[lib]
crate-type = ["cdylib"]
